Allow enter to select the button on MacViews

Bug: 789882
Change-Id: I2175ee765da71fcd34211f544057973f84cb0ac3